Import implementations in notebook

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -33,6 +33,8 @@
    "outputs": [],
    "source": [
     "from proj1_helpers import *\n",
+    "from implementations import * # Our functions\n",
+    "\n",
     "DATA_TRAIN_PATH = 'data/train.csv' # TODO: download train data and supply path here \n",
     "y, tX, ids = load_csv_data(DATA_TRAIN_PATH)"
    ]
