Clean logistic add aug feature

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [
     {
@@ -20,6 +20,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from proj1_helpers import *\n",
+    "from helpers import *\n",
     "from implementations import *\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -34,30 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def standardize(tX):\n",
-    "    mean = np.mean(tX, axis=0)\n",
-    "    std = np.std(tX, axis=0)\n",
-    "    tX = (tX - mean) / std\n",
-    "    return tX"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 234,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def add_bias(tX):\n",
-    "    return np.hstack((np.ones((tX.shape[0], 1)), tX))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 307,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -79,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,13 +74,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 335,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.00000000e+00,  4.61413715e-01,  6.83319669e-02,  4.07680272e-01,\n",
+       "       -4.69966242e-01,  1.03309853e+00,  3.39894409e-01,  1.70928751e-01,\n",
+       "        1.27708372e+00, -2.70810701e-01, -7.56756847e-01,  3.86846731e-01,\n",
+       "        1.04440205e+00,  4.12510497e-01,  2.12902616e-01,  4.66925770e-03,\n",
+       "        1.66203205e-01,  2.20868269e-01,  1.06729257e+00,  1.15528209e-01,\n",
+       "        2.92166381e-02,  1.63094282e+00,  7.33384356e-02,  5.72680926e-01,\n",
+       "        1.49650393e-01,  1.09077565e+00,  1.70164910e-01,  9.82361872e-02,\n",
+       "        3.19059563e-04,  6.77577677e-02, -1.03800630e-01,  1.10261838e+00,\n",
+       "        3.92673924e-02,  4.99396346e-03,  2.08285051e+00, -1.98608331e-02,\n",
+       "       -4.33380212e-01,  5.78917654e-02,  1.13920833e+00,  7.01948118e-02])"
+      ]
+     },
+     "execution_count": 335,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tX_train = full_tX_red_norm[:80000][:].copy()\n",
-    "tX_train_bias = add_bias(tX_train)\n",
-    "y_train = y[:80000][:].copy()[:, np.newaxis]"
+    "tX_train = build_poly(tX_train, 3)\n",
+    "y_train = y[:80000][:].copy()[:, np.newaxis]\n",
+    "tX_train[0]"
    ]
   },
   {
@@ -114,65 +113,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/flo/EPFL/ML/ML-Project-01/helpers.py:138: RuntimeWarning: overflow encountered in exp\n",
+      "  exp = np.exp(tx @ w)\n",
+      "/home/flo/EPFL/ML/ML-Project-01/implementations.py:149: RuntimeWarning: invalid value encountered in subtract\n",
+      "  if np.abs(loss - new_loss) < threshold:\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration : 0 with loss [[13025.74739044]]\n",
-      "Iteration : 50 with loss [[-16356.98175696]]\n",
-      "Iteration : 100 with loss [[-32658.75312963]]\n",
-      "Iteration : 150 with loss [[-47970.0973406]]\n",
-      "Iteration : 200 with loss [[-63005.04435099]]\n",
-      "Iteration : 250 with loss [[-77902.96975298]]\n",
-      "Iteration : 300 with loss [[-92714.3109318]]\n",
-      "Iteration : 350 with loss [[-107463.03111276]]\n",
-      "Iteration : 400 with loss [[-122162.22810561]]\n",
-      "Iteration : 450 with loss [[-136819.74051415]]\n",
-      "Iteration : 500 with loss [[-151440.5768695]]\n",
-      "Iteration : 550 with loss [[-166028.10053022]]\n",
-      "Iteration : 600 with loss [[-180584.66054959]]\n",
-      "Iteration : 650 with loss [[-195111.95106663]]\n",
-      "Iteration : 700 with loss [[-209611.22734048]]\n",
-      "Iteration : 750 with loss [[-224083.44140683]]\n",
-      "Iteration : 800 with loss [[-238529.33037997]]\n",
-      "Iteration : 850 with loss [[-252949.47567487]]\n",
-      "Iteration : 900 with loss [[-267344.34374136]]\n",
-      "Iteration : 950 with loss [[-281714.31469747]]\n"
+      "Iteration : 0 with loss [[inf]]\n",
+      "Iteration : 100 with loss [[inf]]\n",
+      "Iteration : 200 with loss [[inf]]\n",
+      "Iteration : 300 with loss [[inf]]\n",
+      "Iteration : 400 with loss [[inf]]\n",
+      "Iteration : 500 with loss [[inf]]\n",
+      "Iteration : 600 with loss [[inf]]\n",
+      "Iteration : 700 with loss [[inf]]\n",
+      "Iteration : 800 with loss [[inf]]\n",
+      "Iteration : 900 with loss [[inf]]\n",
+      "Iteration : 1000 with loss [[inf]]\n",
+      "Iteration : 1100 with loss [[inf]]\n",
+      "Iteration : 1200 with loss [[inf]]\n",
+      "Iteration : 1300 with loss [[inf]]\n",
+      "Iteration : 1400 with loss [[inf]]\n",
+      "Iteration : 1500 with loss [[inf]]\n",
+      "Iteration : 1600 with loss [[inf]]\n",
+      "Iteration : 1700 with loss [[inf]]\n",
+      "Iteration : 1800 with loss [[inf]]\n",
+      "Iteration : 1900 with loss [[inf]]\n",
+      "Iteration : 2000 with loss [[inf]]\n",
+      "Iteration : 2100 with loss [[inf]]\n",
+      "Iteration : 2200 with loss [[inf]]\n",
+      "Iteration : 2300 with loss [[inf]]\n",
+      "Iteration : 2400 with loss [[inf]]\n"
      ]
     }
    ],
    "source": [
-    "w = np.random.rand(tX_chunk1_aug.shape[1], 1)\n",
-    "w_final, loss = reg_logistic_regression(y_chunk1, tX_chunk1_aug, 0.8, w, 1000, 0.00001, True)"
+    "w = np.random.rand(tX_train.shape[1], 1)\n",
+    "w_final, loss = logistic_regression(y_train, tX_train, w, 2500, 0.001, verbose=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compute_accuracy(y, tX, w):\n",
-    "    mapping = np.vectorize((lambda x: -1 if 0 <= x < 0.5 else 1))\n",
-    "    predictions = mapping(sigmoid(tX @ w))\n",
-    "    return np.sum(y == predictions)/(y.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6931"
+       "0.662"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,36 +182,28 @@
    "source": [
     "y_test = y[80000:90000][:].copy()[:,np.newaxis]\n",
     "tX_test = full_tX_red_norm[80000:90000][:].copy()\n",
-    "tX_test = add_bias(tX_test)\n",
+    "tX_test = build_poly(tX_test, 3)\n",
     "compute_accuracy(y_test, tX_test, w_final)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(80000, 1) (80000, 14) (14, 1)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.69655"
+       "0.6640125"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(y_train.shape, tX_train_bias.shape, w_final.shape)\n",
-    "compute_accuracy(y_train, tX_train_bias, w_final)"
+    "compute_accuracy(y_train, tX_train, w_final)"
    ]
   },
   {
