--- a/project1.ipynb
+++ b/project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -50,7 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sanitized_y = y.reshape((y.shape[0], 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +84,7 @@
        "       -0.73823707,  0.30071075,  0.        ,  0.        ,  0.        ])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -112,28 +121,152 @@
      "output_type": "stream",
      "text": [
       "(30, 1)\n",
-      "(30, 1) (250000, 30)\n"
-     ]
-    },
-    {
-     "ename": "MemoryError",
-     "evalue": "Unable to allocate array with shape (250000, 250000) and data type float64",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-72e6ef9e4256>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mw_init\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msanitized_x\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw_init\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mleast_squares_GD\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msanitized_x\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrand\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msanitized_x\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.01\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/EPFL/ML/ML-Project-01/implementations.py\u001b[0m in \u001b[0;36mleast_squares_GD\u001b[0;34m(y, tx, initial_w, max_iters, gamma, verbose)\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mn_iter\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_iters\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m         \u001b[0mgradient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_gradient_mse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_loss_mse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/EPFL/ML/ML-Project-01/helpers.py\u001b[0m in \u001b[0;36mcompute_gradient_mse\u001b[0;34m(y, tx, w)\u001b[0m\n\u001b[1;32m    168\u001b[0m     \"\"\"\n\u001b[1;32m    169\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 170\u001b[0;31m     \u001b[0me\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mtx\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    171\u001b[0m     \u001b[0mgradient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mtx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m \u001b[0;34m@\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    172\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mMemoryError\u001b[0m: Unable to allocate array with shape (250000, 250000) and data type float64"
+      "Iteration : 0 with loss [[10.47290029]] and gradient: [[ 1.76726282]\n",
+      " [-0.29923856]\n",
+      " [ 1.62254188]\n",
+      " [ 3.41462974]\n",
+      " [-0.02015559]\n",
+      " [ 0.37110268]\n",
+      " [-0.05416912]\n",
+      " [-0.97019522]\n",
+      " [ 2.26926176]\n",
+      " [ 3.82400243]\n",
+      " [ 0.11302892]\n",
+      " [ 2.08562892]\n",
+      " [ 0.09305065]\n",
+      " [ 2.45555473]\n",
+      " [ 0.29082197]\n",
+      " [-0.01372632]\n",
+      " [ 1.84004905]\n",
+      " [ 0.49211275]\n",
+      " [ 0.49752027]\n",
+      " [ 2.45341829]\n",
+      " [ 0.61857722]\n",
+      " [ 3.69032119]\n",
+      " [ 2.73002668]\n",
+      " [ 2.00235552]\n",
+      " [ 0.17163147]\n",
+      " [ 0.01814922]\n",
+      " [ 0.94874223]\n",
+      " [ 0.03937312]\n",
+      " [ 0.14073496]\n",
+      " [ 3.53847364]]\n",
+      "Iteration : 500 with loss [[0.43524241]] and gradient: [[ 0.01626948]\n",
+      " [ 0.01113735]\n",
+      " [ 0.01517624]\n",
+      " [ 0.01449179]\n",
+      " [ 0.00495708]\n",
+      " [-0.00133732]\n",
+      " [ 0.02299805]\n",
+      " [-0.02767768]\n",
+      " [ 0.00788255]\n",
+      " [-0.00813798]\n",
+      " [ 0.0250116 ]\n",
+      " [ 0.01870171]\n",
+      " [ 0.03190589]\n",
+      " [ 0.00428636]\n",
+      " [-0.00992155]\n",
+      " [ 0.01352211]\n",
+      " [-0.03549615]\n",
+      " [ 0.00817773]\n",
+      " [ 0.01821398]\n",
+      " [-0.01368888]\n",
+      " [ 0.01381836]\n",
+      " [ 0.00132249]\n",
+      " [-0.01832004]\n",
+      " [-0.01479997]\n",
+      " [ 0.00517461]\n",
+      " [ 0.03422558]\n",
+      " [ 0.05160924]\n",
+      " [ 0.00811202]\n",
+      " [ 0.05840591]\n",
+      " [-0.00259613]]\n",
+      "[[ 0.00443928]\n",
+      " [-0.22420039]\n",
+      " [-0.15000768]\n",
+      " [ 0.16937464]\n",
+      " [ 0.32271873]\n",
+      " [ 0.07281459]\n",
+      " [ 0.25770315]\n",
+      " [ 0.20758746]\n",
+      " [-0.03296058]\n",
+      " [-0.42487395]\n",
+      " [-0.00405719]\n",
+      " [ 0.1058018 ]\n",
+      " [ 0.20072028]\n",
+      " [ 0.31965353]\n",
+      " [-0.00375327]\n",
+      " [ 0.00663865]\n",
+      " [ 0.13756064]\n",
+      " [ 0.00054205]\n",
+      " [ 0.01305467]\n",
+      " [ 0.03275247]\n",
+      " [ 0.0081865 ]\n",
+      " [-0.04219359]\n",
+      " [ 0.18059104]\n",
+      " [ 0.01708082]\n",
+      " [ 0.00311113]\n",
+      " [ 0.01864442]\n",
+      " [ 0.20568131]\n",
+      " [ 0.01220064]\n",
+      " [ 0.05872646]\n",
+      " [ 0.0800294 ]] [[0.40308804]]\n"
      ]
     }
    ],
    "source": [
     "w_init = np.random.rand(sanitized_x.shape[1], 1)\n",
     "print(w_init.shape)\n",
-    "w, loss = least_squares_GD(y, sanitized_x, np.random.rand(sanitized_x.shape[1], 1), 1000, 0.01, verbose=True)\n",
+    "w, loss = least_squares_GD(sanitized_y, sanitized_x, np.random.rand(sanitized_x.shape[1], 1), 1000, 0.01, verbose=True)\n",
     "print(w, loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.25516513]\n",
+      " [ 0.31391931]\n",
+      " [-0.42809016]\n",
+      " ...\n",
+      " [-0.0349503 ]\n",
+      " [ 0.41117694]\n",
+      " [-0.33713466]]\n",
+      "[[-1.]\n",
+      " [ 1.]\n",
+      " [-1.]\n",
+      " ...\n",
+      " [-1.]\n",
+      " [ 1.]\n",
+      " [-1.]]\n",
+      "0.71338\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = sanitized_x @ w\n",
+    "print(prediction)\n",
+    "\n",
+    "prediction[prediction >= 0] = 1\n",
+    "prediction[prediction <= 0] = -1\n",
+    "\n",
+    "print(prediction)\n",
+    "\n",
+    "print(np.sum(prediction == sanitized_y)/sanitized_y.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(compute_accuracy(sanitized_y, sanitized_x, ))"
    ]
   },
   {
